Updated specification and configuration

--- a/.env-default
+++ b/.env-default
@@ -8,3 +8,11 @@ FILEENGINE_LDAP_BIND_DN=cn=admin,dc=rationalboxes,dc=com
 FILEENGINE_LDAP_BIND_PASSWORD=admin
 
 LOG_LEVEL=debug
+LOG_FILE=./log/webdav.log
+
+# PostgreSQL Configuration
+FILEENGINE_PG_HOST=localhost
+FILEENGINE_PG_PORT=5434
+FILEENGINE_PG_DATABASE=fileengine_webdav
+FILEENGINE_PG_USER=postgres
+FILEENGINE_PG_PASSWORD=postgres
