--- a/.env-default
+++ b/.env-default
@@ -16,3 +16,6 @@ FILEENGINE_PG_PORT=5434
 FILEENGINE_PG_DATABASE=fileengine_webdav
 FILEENGINE_PG_USER=postgres
 FILEENGINE_PG_PASSWORD=postgres
+
+WEBDAV_HOST=0.0.0.0
+WEBDAV_PORT=8088
