--- a/.env-default
+++ b/.env-default
@@ -9,6 +9,7 @@ FILEENGINE_LDAP_BIND_PASSWORD=admin
 
 LOG_LEVEL=debug
 LOG_FILE=./log/webdav.log
+LOG_WRITE_TO_CONSOLE=true
 
 # PostgreSQL Configuration
 FILEENGINE_PG_HOST=localhost
