--- a/.env-default
+++ b/.env-default
@@ -6,6 +6,8 @@ FILEENGINE_LDAP_ENDPOINT=ldap://localhost:1389
 FILEENGINE_LDAP_DOMAIN=dc=rationalboxes,dc=com
 FILEENGINE_LDAP_BIND_DN=cn=admin,dc=rationalboxes,dc=com
 FILEENGINE_LDAP_BIND_PASSWORD=admin
+FILEENGINE_LDAP_TENANT_BASE=ou=tenants
+FILEENGINE_LDAP_USER_BASE=ou=users
 
 LOG_LEVEL=debug
 LOG_FILE=./log/webdav.log
